# edge-cam

./: .gitignore  Dockerfile  build-and-run.sh  camera.py  docker-compose.yml  main.py  pyproject.toml  run-docker.sh
edge-cam-env/: pyvenv.cfg
